--- a/style.css
+++ b/style.css
@@ -1,71 +1,166 @@
 body {
-    padding: 100px;
-    width: 100%;
-    display: flex;
+    height: 100vh;
+    max-width: 100%;
     align-items: center;
     justify-content: center;
-    background-color: rgb(236, 234, 231);
+    background-color: rgb(12, 12, 12);
     font-family: sans-serif, serif;
-    background-color: pink;
 }
 
-@keyframes my {
-    0% {
-        color: #F8CD0A;
-    }
-    50% {
-        color: rgb(185, 8, 141);
-    }
-    100% {
-        color: #eb7fa3;
-    }
+p {
+    font-family: sans-serif, serif;
+    font-size: 50px;
 }
 
-h1 {
-    display: block;
-    font-size: 24px;
-    font-weight: bold;
-    -webkit-animation: my 900ms infinite;
-    -moz-animation: my 900ms infinite;
-    -o-animation: my 900ms infinite;
-    animation: my 900ms infinite;
-}
-
-.img-luv {
-    display: inline;
-}
-
-.imgok {
-    width: 30%;
-    height: 30%;
-}
-
-
-/* 
-.page {
-    display: flex;
-    width: 100%;
-    height: 100%;
+.header {
+    position: relative;
+    background-image: url(/img/catlaptop.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 90%;
+    background-position: 0 -300px;
+    /* set imagebackground */
+    height: 400px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    display: block;
+    width: 100%;
+}
+
+.header-head {
+    position: relative;
+    background-color: black;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    margin: 20px 60px 10px 60px;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.quick-tab {
+    display: flex;
+}
+
+.quick-tab-click {
+    position: relative;
+    display: block;
+    color: white;
+    font-size: 2em;
+    font-weight: bold;
+    margin-left: 20px;
+    text-shadow: 10px 5px 10px rgb(7, 7, 7);
+}
+
+.quick-tab-click:hover {
+    cursor: pointer;
+    animation: hoverup 0.4s;
+    color: red;
+    font-weight: bold;
+    margin-top: -2px;
+}
+
+.name-code {
+    color: rgba(252, 249, 249, 0.678);
+    margin-top: 2px;
+    font-size: 3em;
+    font-weight: bold;
+    text-decoration: none;
+    text-shadow: 2px 2px 2px rgb(14, 13, 13);
+}
+
+.name-code:hover {
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 3.2em;
+}
+
+
+/* .name-code:hover{
+    cursor: pointer;
+    font-weight: bold; 
 } */
 
-.modal {
-    width: 390px;
-    font-family: sans-serif, serif;
+.introduce {
+    /* position: relative;
+    height: 100%;
+    width: 80%;
+    margin-top: -50px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center; */
+    /* display: block;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: 30px;
+    margin-left: 30px;
+    background-color: rgb(209, 86, 86); */
+    background-color: rgb(19, 18, 18);
+    position: relative;
+    margin-top: -100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    border: rgb(80, 80, 80) 4px solid;
+    border-radius: 20px;
+    display: flex;
+    color: white;
 }
 
-.modal-content {
-    width: 390px;
-    position: absolute;
+@keyframes hoverup {
+    0% {
+        color: white;
+        margin-top: 0.1px;
+    }
+    100% {
+        color: red;
+        font-weight: bold;
+        margin-top: -2px;
+        font-size: 2.1em;
+    }
 }
 
-.header-modal {
-    text-align: center;
-    padding: 14px 42px 0 42px;
+.namename {
+    width: 50%;
+    margin-left: 50px;
+    display: flex;
 }
 
-.h4 {
-    padding-left: 50px;
+.imgAva {
+    border: rgb(129, 124, 124) 5px solid;
+    border-radius: 30px;
+    margin-top: -20px;
+}
+
+.text-infor-2,
+.s {
+    width: 100%;
+    font-size: 30px;
+}
+
+.contact-2 {
+    position: relative;
     margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 20px;
+}
+
+ul {
+    margin-left: 50px;
+    list-style: none;
+}
+
+.about-me {
+    height: 100%;
+    position: relative;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    border: rgb(80, 80, 80) 4px solid;
+    border-radius: 20px;
+    display: flex;
+    color: white;
 }
