--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
     height: 100%;
     width: 100%;
@@ -80,7 +79,7 @@ div>h2 {
     margin-right: 30px;
     margin-left: 30px;
     background-color: rgb(209, 86, 86); */
-    background-color: rgb(44, 42, 42);
+    background-color: rgb(42, 43, 44);
     /* position: relative; */
     align-items: center;
     width: 100%;
@@ -164,13 +163,13 @@ li {
 .col-10-content {
     margin-top: 50px;
     font-weight: bold;
-    color: rgb(66, 66, 219);
+    color: rgb(43, 91, 250);
     font-size: 40px;
 }
 
 .col-10-p {
     margin-top: 20px;
-    font-size: 20px;
+    font-weight: lighter;
 }
 
 .icon-tab {
@@ -194,6 +193,39 @@ li {
 }
 
 .skill-bar {
-    border: white 2px solid;
+    background-color: rgb(175, 170, 170) !important;
+    border-radius: 30px !important;
+}
+
+@keyframes loadOut {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.progress-bar-skill {
+    animation: 2s ease-out 0s 1 loadOut;
+    border-radius: 30px !important;
+}
+
+.contact-tab {
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+.contact-img {
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+}
+
+.thanks-regard {
+    text-align: center;
+    padding: 50px;
+    border: rgb(129, 124, 124) 4px solid;
     border-radius: 20px;
+    margin-bottom: 20px;
 }
